--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-pdf": "^5.3.2",
-    "regenerator-runtime": "^0.13.9",
     "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.15.0"
   }
 }
